// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react should enable react if options.react is enabled and enable development goodies 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-syntax-jsx/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-jsx/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-display-name/lib/index.js",
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-jsx-source/lib/index.js",
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-jsx-self/lib/index.js",
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`react should enable react optimizations if env is production 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-syntax-jsx/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-jsx/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-display-name/lib/index.js",
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-remove-prop-types/lib/index.js",
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-constant-elements/lib/index.js",
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-inline-elements/lib/index.js",
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`should allow overriding options.targets with an object 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "node": "current",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`should disable modules if options.modules is disabled 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": false,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`should return a config for node if options.targets is set to browser 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {},
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`should return a config for node if options.targets is set to node 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`should return a default config that target browsers and node 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`should set modules to false if BABEL_ENV is es 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": false,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;
